syntax = "proto3";

package com.andrew.rental;

option java_multiple_files = true;

message AddRentRequest {
  string client_id = 1;
  string car_id = 2;
  int32 duration = 3;
}

message AddRentResponse {

}

message GetRentRequest {
  string rent_id = 1;
}

message GetRentResponse {
  string id = 1;
  int32 duration = 2;
  string car_id = 3;
  string client_id = 4;
}

message AllRentsForUserRequest {
  string client_id = 1;
}

message AllRentsForUserResponse {
  repeated GetRentResponse rents = 1;
}

message DeleteRentRequest {
  string id = 1;
}

message DeleteRentResponse {

}

service RentService {
  rpc add (AddRentRequest) returns (AddRentResponse);
  rpc allForUser (AllRentsForUserRequest) returns (AllRentsForUserResponse);
  rpc get (GetRentRequest) returns (GetRentResponse);
  rpc close (DeleteRentRequest) returns (DeleteRentResponse);
}